Created a separate module out of gpio

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,12 +1,10 @@
 set(MAIN_SOURCES
     init.c
     main.c
-    sleep.c
 )
 
-set(GPIO_SOURCES
-    gpio.c
-)
+add_subdirectory(gpio)
 
-add_executable(final.elf ${MAIN_SOURCES} ${GPIO_SOURCES})
+add_executable(final.elf ${MAIN_SOURCES})
+target_link_libraries(final.elf PRIVATE Gpio)
 target_link_options(final.elf PRIVATE LINKER:-Map=final.map)
